fixed header to editor padding alignment when duo mode is off

--- a/src/apps/content-editor/src/app/components/Editor/Editor.less
+++ b/src/apps/content-editor/src/app/components/Editor/Editor.less
@@ -4,19 +4,24 @@
   display: grid;
   grid-template-columns: 30fr 70fr;
   box-sizing: border-box;
+  padding-right: 32px;
+
+  @media only screen and (min-width: 2000px) {
+    padding-right: 48px;
+  }
 
   &.DuoModeOff {
     grid-template-columns: 1fr;
-
-    .Fields {
-      // padding: 32px 32px 32px 48px;
-    }
   }
 
   .Fields {
     display: flex;
     flex-direction: column;
     padding: 32px 0 32px 32px;
+
+    @media only screen and (min-width: 2000px) {
+      padding: 32px 0 32px 48px;
+    }
 
     //Hide Scrollbar
     overflow-y: scroll;
